correct css and js file names

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Color Game</title>
-  <link rel="stylesheet" href="colorGame.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
 
 
 
-  <script src="colorGame.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
